# objcomp

./: .gitmodules  CMakeLists.txt  README.md
include/objcomp/: Component.h  Object.h  Object.inl
platform/msvc/: .gitignore
platform/msvc/projects/: objcomp.vcxproj
source/: Component.cpp  Object.cpp
